--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "1.0.1",
     "@aws-amplify/ui-react": "^6.2.1",
+    "@emotion/styled": "11.13.0",
+    "antd": "5.20.5",
     "aws-amplify": "^6.4.0",
     "next": "14.1.1",
     "react": "^18",
