--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5.3.2"
+  },
+  "optionalDependencies": {
+    "@parcel/watcher-linux-x64-glibc": "2.2.0",
+    "lightningcss-linux-x64-gnu": "1.21.5"
   }
 }
