--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "1.0.1",
+    "@aws-amplify/auth": "^6.4.0",
     "@aws-amplify/ui-react": "^6.2.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.651.1",
     "@emotion/styled": "11.13.0",
     "antd": "5.20.5",
-    "aws-amplify": "^6.4.0",
+    "aws-amplify": "^6.6.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
