--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "aws-amplify": "^6.6.0",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "2.2.5"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
