--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "@ant-design/nextjs-registry": "1.0.1",
     "@aws-amplify/auth": "^6.4.0",
     "@aws-amplify/datastore": "^5.0.57",
-    "@aws-amplify/ui-react": "^6.2.1",
+    "@aws-amplify/ui-react": "^6.5.5",
     "@aws-sdk/client-cognito-identity-provider": "^3.651.1",
     "@emotion/styled": "11.13.0",
     "antd": "5.20.5",
-    "aws-amplify": "^6.6.0",
-    "next": "14.1.1",
+    "aws-amplify": "^6.6.6",
+    "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
     "swr": "2.2.5"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.0.4",
-    "@aws-amplify/backend-cli": "^1.1.1",
+    "@aws-amplify/backend": "^1.5.1",
+    "@aws-amplify/backend-cli": "^1.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9.13.0",
-    "typescript": "^5.3.2"
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.2"
   },
   "optionalDependencies": {
     "@parcel/watcher-linux-x64-glibc": "2.2.0",
