--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "5.20.5",
     "dayjs": "^1.11.13",
     "aws-amplify": "^6.6.6",
+    "dayjs": "^1.11.13",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
