--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "dayjs": "^1.11.13",
     "aws-amplify": "^6.6.6",
     "dayjs": "^1.11.13",
+    "docx": "^9.1.1",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
@@ -27,6 +30,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
     "@aws-amplify/backend-cli": "^1.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
